manifests/istio-cilium-assignmnet/02-strict-mtls.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: security-lab
spec:
  mtls:
    mode: STRICT
