manifests/istio-cilium-assignmnet/01-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: security-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
        - name: sleep
          image: curlimages/curl:8.7.1
          command: ["/bin/sh", "-c", "sleep 3650d"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: security-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: security-lab
spec:
  selector:
    app: httpbin
  ports:
    - port: 80
      targetPort: 80
