manifests/istio-cilium-assignmnet/03-default-deny-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-egress
  namespace: security-lab
spec:
  endpointSelector: {}
  egressDeny:
    - {}
